--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
-  
+<html ng-app = "shortUrlApp">
 <head>
     <title>URL Shortener Microservice</title>
     <!--Angular 1.6.5-->
     <script src="https://ajax.googleaspis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
-    <script src="/js/app.js"></script>
-    <!-- Latest compiled and minified CSS -->
+    <!--Angular app JS -->
+    <script src="js/app.js"></script>
+    <!-- Bootstrap | Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Latest compiled and minified JavaScript -->
+    <!-- Bootstrap | Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
  <body class="text-center">
