--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html ng-app = "shortUrlApp">
+<html ng-app="shortUrlApp">
 <head>
     <title>URL Shortener Microservice</title>
     <!--Angular 1.6.5-->
-    <script src="https://ajax.googleaspis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <!--Angular app JS -->
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
     <!-- Bootstrap | Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Bootstrap | Latest compiled and minified JavaScript -->
