Updated index.html to accurately reflect technologies

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a href="https://www.freecodecamp.com" target="_blank">freeCodeCamp</a>
       </h4>
       <h5>
-        Technologies: Node, Express, MongoDB, Mongoose, JavaScript, HTML, CSS and BootStrap
+        Technologies: Node, Express, MongoDB, Mongoose, JavaScript, Bootstrap, and Angular
       </h5>
     </header>
     <section ng-controller = "shortAppCtrl">
